--- a/package.json
+++ b/package.json
@@ -1,32 +1,27 @@
 {
-  "name": "hosted-hubot",
-  "version": "2.7.1",
+  "name": "ipfsbot",
+  "version": "0.0.0",
   "private": true,
-  "author": "GitHub Inc.",
-  "keywords": [
-    "github",
-    "hubot",
-    "campfire",
-    "bot"
-  ],
-  "description": "A simple helpful robot for your Company",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/github/hubot/raw/master/LICENSE"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/github/hubot.git"
-  },
+  "author": "Juan Benet <juan@benet.ai>",
+  "description": "ipfs bot",
   "dependencies": {
-    "hubot": ">= 2.6.0 < 3.0.0",
-    "hubot-irc": "^0.2.7",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0"
+    "hubot": "^2.16.0",
+    "hubot-diagnostics": "0.0.1",
+    "hubot-github-adapter": "^0.10.0",
+    "hubot-google-images": "^0.2.1",
+    "hubot-google-translate": "^0.2.0",
+    "hubot-help": "^0.1.1",
+    "hubot-heroku-keepalive": "^1.0.0",
+    "hubot-irc": "^0.2.8",
+    "hubot-maps": "0.0.2",
+    "hubot-pugme": "^0.1.0",
+    "hubot-redis-brain": "0.0.3",
+    "hubot-rules": "^0.1.1",
+    "hubot-scripts": "^2.16.2",
+    "hubot-shipit": "^0.2.0",
+    "ipfs-api": "^2.3.0"
   },
   "engines": {
-    "node": ">= 0.8.x",
-    "npm": ">= 1.1.x"
+    "node": "0.10.x"
   }
 }
