--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "ipfsbot",
+  "name": "hu-pinbot",
   "version": "0.0.0",
   "private": true,
-  "author": "Juan Benet <juan@benet.ai>",
-  "description": "ipfs bot",
+  "author": "jbenet <juan@protocol.ai",
+  "description": "A simple helpful pinbot across platforms",
   "dependencies": {
-    "hubot": "^2.16.0",
-    "hubot-diagnostics": "0.0.1",
-    "hubot-github-adapter": "^0.10.0",
-    "hubot-google-images": "^0.2.1",
-    "hubot-google-translate": "^0.2.0",
-    "hubot-help": "^0.1.1",
-    "hubot-heroku-keepalive": "^1.0.0",
-    "hubot-irc": "^0.2.8",
-    "hubot-maps": "0.0.2",
-    "hubot-pugme": "^0.1.0",
-    "hubot-redis-brain": "0.0.3",
-    "hubot-rules": "^0.1.1",
-    "hubot-scripts": "^2.16.2",
-    "hubot-shipit": "^0.2.0",
-    "ipfs-api": "^2.3.0"
+    "hubot": "^2.19.0",
+    "hubot-diagnostics": "0.0.2",
+    "hubot-google-images": "^0.2.7",
+    "hubot-google-translate": "^0.2.1",
+    "hubot-help": "^0.2.2",
+    "hubot-heroku-keepalive": "^1.0.3",
+    "hubot-maps": "0.0.3",
+    "hubot-pugme": "^0.1.1",
+    "hubot-redis-brain": "0.0.4",
+    "hubot-rules": "^0.1.2",
+    "hubot-scripts": "^2.17.2",
+    "hubot-shipit": "^0.2.1",
+    "hubot-slack": "^4.5.1"
   },
   "engines": {
     "node": "0.10.x"
