--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "hubot-rules": "^0.1.2",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.5.1"
+    "hubot-slack": "^4.5.1",
+    "ipfs-api": "^22.1.0",
+    "underscore": "^1.9.1"
   },
   "engines": {
     "node": "0.10.x"
