Use hubot-ipfs external package

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hubot-google-translate": "^0.2.1",
     "hubot-help": "^0.2.2",
     "hubot-heroku-keepalive": "^1.0.3",
+    "hubot-ipfs": "^0.1",
     "hubot-maps": "0.0.3",
     "hubot-pugme": "^0.1.1",
     "hubot-redis-brain": "0.0.4",
